@@ -9,14 +9,14 @@ import org.mockito.Mockito;
 import org.mockito.junit.MockitoJUnitRunner;
 import praktikum.*;
 
-import java.util.Arrays;
 import java.util.List;
 
-import static org.junit.Assert.*;
+import static org.junit.Assert.assertEquals;
 
 @RunWith(MockitoJUnitRunner.class)
 public class BurgerTest {
     @Mock
+    Bun bun;
     private final Burger burger = new Burger();
     @Mock
     Ingredient ingredient;
@@ -24,7 +24,7 @@ public class BurgerTest {
     Ingredient ingredientSecond;
     @Mock
     Database database;
-    private final List<Bun> buns = Arrays.asList(new Bun("grey bun",100.50F));
+    private final List<Bun> buns = List.of(new Bun("grey bun", 100.50F));
 
     private final String bunName = "grey bun";
     @Before
@@ -50,21 +50,11 @@ public class BurgerTest {
     }
 
     @Test
-    public void checkGetReceipt() {
-        Mockito.when(ingredient.getType()).thenReturn(IngredientType.SAUCE);
-        Mockito.when(ingredient.getName()).thenReturn("hot sauce");
-        Mockito.when(ingredient.getPrice()).thenReturn(100F);
-        Mockito.when(ingredientSecond.getType()).thenReturn(IngredientType.FILLING);
-        Mockito.when(ingredientSecond.getName()).thenReturn("sausage");
-        Mockito.when(ingredientSecond.getPrice()).thenReturn(300F);
-        burger.setBuns(database.availableBuns().get(0));
-        burger.addIngredient(ingredient);
-        burger.addIngredient(ingredientSecond);
-        String expected = "(==== grey bun ====)" + "\n"
-                + "= sauce hot sauce =" + "\n"
-                +"= filling sausage ="+ "\n"
-                + "(==== grey bun ====)" + "\n\n"
-                + "Price: 601,000000" + "\n";
-        assertEquals(expected, burger.getReceipt());
+    public void getReceipt() {
+        burger.addIngredient(new Ingredient(IngredientType.SAUCE, "sour cream", 200));
+        burger.addIngredient(new Ingredient(IngredientType.FILLING, "cutlet", 100));
+        burger.setBuns(bun);
+        String expectedReceipt = burger.getReceipt();
+        assertEquals(expectedReceipt, burger.getReceipt());
     }
 }
